--- a/index.html
+++ b/index.html
@@ -6,5 +6,19 @@
 
   <body>
     <h1>in process</h1>
+    <div id="siri-container"></div>
+    <script src="/path/to/your/siriwave.js"></script>
+    <script>
+    var siriWave = new SiriWave({
+        container: document.getElementById('siri-container'),
+        width: 640,
+        height: 200,
+        /*
+        speed: 0.2,
+        color: '#000',
+        frequency: 2
+        */
+    });
+    </script>
   </body>
 </html>
