--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>in process</h1>
     <div id="siri-container"></div>
-    <script src="/path/to/your/siriwave.js"></script>
+    <script src="siriwave.js"></script>
     <script>
     var siriWave = new SiriWave({
         container: document.getElementById('siri-container'),
