--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         container: document.getElementById('siri-container'),
         width: 640,
         height: 200,
+        autostart: true,
         /*
         speed: 0.2,
         color: '#000',
