--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8"/>
+    <style>
+      .container {
+			width: 259px;
+			height: 80px;
+			position: absolute;
+			left: 0;
+			right: 0;
+			bottom: 20px;
+		}
+    </style>
     <title>Kaymas</title>
   </head>
 
   <body>
     <h1>in process</h1>
-    <div id="siri-container"></div>
+    <div class="container" id="siri-container"></div>
     <script src="siriwave.js"></script>
     <script>
     var siriWave = new SiriWave({
         container: document.getElementById('siri-container'),
-        width: 640,
-        height: 200,
         autostart: true,
+        amplitude: 1,
         /*
         speed: 0.2,
         color: '#000',
