--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <h1>in process</h1>
     <div class="container" id="siri-container"></div>
-    <script src="siriwave.js"></script>
+    <script src="siriwavejs.js"></script>
     <script>
     var siriWave = new SiriWave({
         container: document.getElementById('siri-container'),
