--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			position: absolute;
 			left: 0;
 			right: 0;
-			bottom: 20px;
+			top: 20px;
 		}
     </style>
     <title>Kaymas</title>
@@ -17,7 +17,9 @@
 
   <body>
     <h1>in process</h1>
-    <div class="container" id="siri-container"></div>
+    <div class="container" id="siri-container">
+	 <canvas width="259" height="80" style="width: 259px; height: 50px;"></canvas>
+    </div>
     <script src="siriwavejs.js"></script>
     <script>
     var siriWave = new SiriWave({
