--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         container: document.getElementById('siri-container'),
         autostart: true,
         amplitude: 1,
+	color: '#0f0',
         /*
         speed: 0.2,
-        color: '#000',
         frequency: 2
         */
     });
