--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
       .container {
 			width: 259px;
-			height: 80px;
+			height: 50px;
 			position: absolute;
 			left: 0;
 			right: 0;
@@ -25,7 +25,7 @@
         container: document.getElementById('siri-container'),
         autostart: true,
         amplitude: 1,
-	color: '#0f0',
+	color: '#00f',
         /*
         speed: 0.2,
         frequency: 2
