--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
   <head>
     <meta charset="utf-8"/>
     <style>
-      .container {
-			width: 259px;
-			height: 50px;
+	body {
+			font-family: 'Helvetica Neue', Helvetica, sans-serif;
+			font-weight: 100;
+			background: #fff;
+			color: #000;
+			text-align: center;
+		}
+      	.container {
+			width: 1920px;
+			height: 1080px;
 			position: absolute;
 			left: 0;
 			right: 0;
-			top: 20px;
+			top: 0;
 		}
     </style>
     <title>Kaymas</title>
@@ -25,7 +32,7 @@
         container: document.getElementById('siri-container'),
         autostart: true,
         amplitude: 1,
-	color: '#00f',
+	color: '#000',
         /*
         speed: 0.2,
         frequency: 2
