--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
 			text-align: center;
 		}
       	.container {
-			width: 1920px;
-			height: 1080px;
-			position: absolute;
-			left: 0;
-			right: 0;
-			top: 0;
+			width: 600px;
+			height: 400px;
+			text-align: center;
 		}
     </style>
     <title>Kaymas</title>
