--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       	.container {
 			width: 600px;
 			height: 400px;
-			text-align: center;
+			margin-left:auto;
+			margin-right:auto
 		}
     </style>
     <title>Kaymas</title>
