--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <h1>in process</h1>
+    <h1>In Process</h1>
     <div class="container" id="siri-container">
     </div>
     <script src="siriwavejs.js"></script>
@@ -31,8 +31,8 @@
         autostart: true,
         amplitude: 1,
 	color: '#000',
+	speed: 0.2,
         /*
-        speed: 0.2,
         frequency: 2
         */
     });
