--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         autostart: true,
         amplitude: 1,
 	color: '#000',
-	speed: 0.05,
+	speed: 0.08,
+	cover: true,
         /*
         frequency: 2
         */
