--- a/index.html
+++ b/index.html
@@ -30,8 +30,30 @@
         container: document.getElementById('siri-container'),
         autostart: true,
         amplitude: 1,
-	color: '#000',
-	speed: 0.08,
+	color: '#f00',
+	speed: 0.1,
+	cover: true,
+        /*
+        frequency: 2
+        */
+    });
+	    var siriWave2 = new SiriWave({
+        container: document.getElementById('siri-container'),
+        autostart: true,
+        amplitude: 1,
+	color: '#0f0',
+	speed: 0.1,
+	cover: true,
+        /*
+        frequency: 2
+        */
+    });
+	    var siriWave3 = new SiriWave({
+        container: document.getElementById('siri-container'),
+        autostart: true,
+        amplitude: 1,
+	color: '#00f',
+	speed: 0.1,
 	cover: true,
         /*
         frequency: 2
