--- a/index.html
+++ b/index.html
@@ -40,23 +40,9 @@
 	    var siriWave2 = new SiriWave({
         container: document.getElementById('siri-container'),
         autostart: true,
-        amplitude: 1,
-	color: '#0f0',
-	speed: 0.1,
-        /*
-        frequency: 2
-        */
+       style: 'ios9'
     });
-	    var siriWave3 = new SiriWave({
-        container: document.getElementById('siri-container'),
-        autostart: true,
-        amplitude: 1,
-	color: '#00f',
-	speed: 0.1,
-        /*
-        frequency: 2
-        */
-    });
+	
     </script>
   </body>
 </html>
