--- a/index.html
+++ b/index.html
@@ -26,21 +26,23 @@
     </div>
     <script src="siriwavejs.js"></script>
     <script>
-    var siriWave = new SiriWave({
+    /*var siriWave = new SiriWave({
         container: document.getElementById('siri-container'),
         autostart: true,
         amplitude: 1,
 	color: '#f00',
 	speed: 0.1,
 	cover: true,
-        /*
+        
         frequency: 2
-        */
-    });
+        
+    });*/
 	    var siriWave2 = new SiriWave({
         container: document.getElementById('siri-container'),
-        autostart: true,
-       style: 'ios9'
+        amplitude: 1,
+	autostart: true,
+        style: 'ios9'
+		
     });
 	
     </script>
