--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     });*/
 	    var siriWave2 = new SiriWave({
         container: document.getElementById('siri-container'),
-        amplitude: 1,
+        amplitude: 0.6,
+	speed: 0.1,
 	autostart: true,
         style: 'ios9'
 		
