--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	body {
 			font-family: 'Helvetica Neue', Helvetica, sans-serif;
 			font-weight: 100;
-			background: #fff;
-			color: #000;
+			background: #000;
+			color: #fff;
 			text-align: center;
 		}
       	.container {
@@ -40,7 +40,7 @@
 	    var siriWave2 = new SiriWave({
         container: document.getElementById('siri-container'),
         amplitude: 0.6,
-	speed: 0.1,
+	speed: 0.2,
 	autostart: true,
         style: 'ios9'
 		
