--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			text-align: center;
 		}
       	.container {
-			width: 600px;
+			width: 100%;
 			height: 400px;
 			margin-left:auto;
 			margin-right:auto
