--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 			color: #fff;
 			text-align: center;
 		}
-      	.container {
-			width: 100%;
+	.container{
+			width: 50%;
+			height: 50%;
+			background: #000;
+			margin-left: auto;
+			margin-right: auto;
+	    }
+      	.subcontainer {
+			width: 600px;
 			height: 400px;
 			margin-left:auto;
 			margin-right:auto
@@ -21,8 +28,11 @@
   </head>
 
   <body>
-    <h1>In Process</h1>
-    <div class="container" id="siri-container">
+    
+    <div>
+	    <h1>In Process</h1>
+	    <div class="subcontainer" id="siri-container">
+	    </div>
     </div>
     <script src="siriwavejs.js"></script>
     <script>
