--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <body>
     
-    <div>
+    <div class="container">
 	    <h1>In Process</h1>
 	    <div class="subcontainer" id="siri-container">
 	    </div>
