--- a/index.html
+++ b/index.html
@@ -9,14 +9,37 @@
 			background: #fff;
 			color: #fff;
 			text-align: center;
+			padding: 40px;
+			overflow-x: hidden; /* For Opera */
+			-webkit-box-shadow:
+				inset #19d4ff 0 0 0 5px,
+				inset #18cdf7 0 0 0 1px,
+				inset #53dfff 0 0 0 10px,
+				inset #50d8f7 0 0 0 11px,
+				inset #8ce9ff 0 0 0 16px,
+				inset #88e2f7 0 0 0 17px,
+				inset #c5f4ff 0 0 0 22px,
+				inset #bfecf7 0 0 0 23px;
+			-moz-box-shadow:
+				inset #19d4ff 0 0 0 5px,
+				inset #18cdf7 0 0 0 1px,
+				inset #53dfff 0 0 0 10px,
+				inset #50d8f7 0 0 0 11px,
+				inset #8ce9ff 0 0 0 16px,
+				inset #88e2f7 0 0 0 17px,
+				inset #c5f4ff 0 0 0 22px,
+				inset #bfecf7 0 0 0 23px;
+			box-shadow:
+				inset #19d4ff 0 0 0 5px,
+				inset #18cdf7 0 0 0 1px,
+				inset #53dfff 0 0 0 10px,
+				inset #50d8f7 0 0 0 11px,
+				inset #8ce9ff 0 0 0 16px,
+				inset #88e2f7 0 0 0 17px,
+				inset #c5f4ff 0 0 0 22px,
+				inset #bfecf7 0 0 0 23px;
 		}
-	.container{
-			width: 90%;
-			height: 100%;
-			background: #000;
-			margin-left: auto;
-			margin-right: auto;
-	    }
+	
       	.subcontainer {
 			width: 600px;
 			height: 400px;
@@ -28,12 +51,9 @@
   </head>
 
   <body>
-    
-    <div class="container">
-	    <h1>In Process</h1>
-	    <div class="subcontainer" id="siri-container">
-	    </div>
-    </div>
+	   <h1>In Process</h1>
+	   <div class="subcontainer" id="siri-container">
+	   </div>
     <script src="siriwavejs.js"></script>
     <script>
     /*var siriWave = new SiriWave({
