--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	body {
 			font-family: 'Helvetica Neue', Helvetica, sans-serif;
 			font-weight: 100;
-			background: #fff;
+			background: #000;
 			color: #fff;
 			text-align: center;
 			padding: 40px;
