--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			background: #000;
 			color: #fff;
 			text-align: center;
-			padding: 40px;
+			/*padding: 40px;*/
 			overflow-x: hidden; /* For Opera */
 			-webkit-box-shadow:
 				inset #19d4ff 0 0 0 5px,
