--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			background: #000;
 			color: #fff;
 			text-align: center;
-			/*padding: 40px;*/
+			padding: 40px;
 			overflow-x: hidden; /* For Opera */
 			-webkit-box-shadow:
 				inset #19d4ff 0 0 0 5px,
@@ -54,6 +54,7 @@
 	   <h1>In Process</h1>
 	   <div class="subcontainer" id="siri-container">
 	   </div>
+	  </body>
     <script src="siriwavejs.js"></script>
     <script>
     /*var siriWave = new SiriWave({
@@ -77,5 +78,5 @@
     });
 	
     </script>
-  </body>
+  
 </html>
