--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <style>
+	    html{height: 100%}
 	body {
 			font-family: 'Helvetica Neue', Helvetica, sans-serif;
 			font-weight: 100;
