--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 			font-family: 'Helvetica Neue', Helvetica, sans-serif;
 			font-weight: 100;
 			background: #000;
+			height: 100%
 			color: #fff;
 			text-align: center;
 			padding: 40px;
