--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8"/>
     <style>
-	    html{height: 100%}
+	    html{height: 100vh}
 	body {
 			font-family: 'Helvetica Neue', Helvetica, sans-serif;
 			font-weight: 100;
 			background: #000;
-			min-height: 100%,
+			min-height: 100vh,
 			color: #fff;
 			text-align: center;
 			padding: 40px;
