--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			font-family: 'Helvetica Neue', Helvetica, sans-serif;
 			font-weight: 100;
 			background: #000;
-			min-height: 100vh,
+			min-height: 100vh;
 			color: #fff;
 			text-align: center;
 			padding: 40px;
