--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
 	  </body>
     <script src="siriwavejs.js"></script>
     <script>
-    /*var siriWave = new SiriWave({
+    var siriWave = new SiriWave({
         container: document.getElementById('siri-container'),
         autostart: true,
         amplitude: 1,
-	color: '#f00',
+	color: '#00f',
 	speed: 0.1,
 	cover: true,
         
         frequency: 2
         
-    });*/
+    });/*
 	    var siriWave2 = new SiriWave({
         container: document.getElementById('siri-container'),
         amplitude: 0.6,
@@ -78,7 +78,7 @@
         style: 'ios9'
 		
     });
-	
+	*/
     </script>
   
 </html>
