--- a/A-star/a-star.html
+++ b/A-star/a-star.html
@@ -7,9 +7,16 @@
   <!--<script language="javascript" src="libraries/p5.sound.js"></script>-->
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
-  <style> body {padding: 0; margin: 0;} </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <header>
+    <h1>A* path finding on a canvas</h1>
+  </header>
+  <div id="sketch-holder" class="div_center"></div>
+  <footer>
+    <button type="button" onClick="window.location.reload();">Refresh</button>
+  </footer>
 </body>
 </html>
