--- a/index.html
+++ b/index.html
@@ -1,65 +1,87 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8"/>
-    <style>
-	    html{height: 100vh}
-	body {
-			font-family: 'Helvetica Neue', Helvetica, sans-serif;
-			font-weight: 100;
-			background: #000;
-			min-height: 100vh;
-			color: #fff;
-			text-align: center;
-			padding: 40px;
-			overflow-x: hidden; /* For Opera */
-			-webkit-box-shadow:
-				inset #19d4ff 0 0 0 5px,
-				inset #18cdf7 0 0 0 1px,
-				inset #53dfff 0 0 0 10px,
-				inset #50d8f7 0 0 0 11px,
-				inset #8ce9ff 0 0 0 16px,
-				inset #88e2f7 0 0 0 17px,
-				inset #c5f4ff 0 0 0 22px,
-				inset #bfecf7 0 0 0 23px;
-			-moz-box-shadow:
-				inset #19d4ff 0 0 0 5px,
-				inset #18cdf7 0 0 0 1px,
-				inset #53dfff 0 0 0 10px,
-				inset #50d8f7 0 0 0 11px,
-				inset #8ce9ff 0 0 0 16px,
-				inset #88e2f7 0 0 0 17px,
-				inset #c5f4ff 0 0 0 22px,
-				inset #bfecf7 0 0 0 23px;
-			box-shadow:
-				inset #19d4ff 0 0 0 5px,
-				inset #18cdf7 0 0 0 1px,
-				inset #53dfff 0 0 0 10px,
-				inset #50d8f7 0 0 0 11px,
-				inset #8ce9ff 0 0 0 16px,
-				inset #88e2f7 0 0 0 17px,
-				inset #c5f4ff 0 0 0 22px,
-				inset #bfecf7 0 0 0 23px;
-		}
-
-      	.subcontainer {
-			width: 600px;
-			height: 400px;
-			margin-left:auto;
-			margin-right:auto
-		}
+      <meta charset="utf-8">
+      <style>
+  	    html{
+          /*height: 100vh*/
+          margin: 0px;
+          height: 100%;
+          width: 100%;
+        }
+  	    body {
+    			font-family: 'Helvetica Neue', Helvetica, sans-serif;
+    			font-weight: 100;
+    			background: #000;
+          font-size: 18px;
+          font-weight: bold;
+    			/*min-height: 100vh;*/
+          margin: 0px;
+          min-height: 100%;
+    			color: #fff;
+    			text-align: center;
+    			padding: 40px;
+    			overflow-x: hidden; /* For Opera */
+    			-webkit-box-shadow:
+    				inset #2E7D32 0 0 0 5px,
+    				inset #388E3C 0 0 0 1px,
+    				inset #43A047 0 0 0 10px,
+    				inset #4CAF50 0 0 0 11px,
+    				inset #66BB6A 0 0 0 16px,
+    				inset #81C784 0 0 0 17px,
+    				inset #A5D6A7 0 0 0 22px,
+    				inset #C8E6C9 0 0 0 23px;
+    			-moz-box-shadow:
+    				inset #2E7D32 0 0 0 5px,
+    				inset #388E3C 0 0 0 1px,
+    				inset #43A047 0 0 0 10px,
+    				inset #4CAF50 0 0 0 11px,
+    				inset #66BB6A 0 0 0 16px,
+    				inset #81C784 0 0 0 17px,
+    				inset #A5D6A7 0 0 0 22px,
+    				inset #C8E6C9 0 0 0 23px;
+    			box-shadow:
+    				inset #2E7D32 0 0 0 5px,
+    				inset #388E3C 0 0 0 1px,
+    				inset #43A047 0 0 0 10px,
+    				inset #4CAF50 0 0 0 11px,
+    				inset #66BB6A 0 0 0 16px,
+    				inset #81C784 0 0 0 17px,
+    				inset #A5D6A7 0 0 0 22px,
+    				inset #C8E6C9 0 0 0 23px;
+      }
+      
+    	.subcontainer {
+        width: 600px;
+  			height: 400px;
+    		margin-left:auto;
+  			margin-right:auto
+  		}
+      .matrix{
+        width: 100vw;
+        height: 100vh;
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: -9999;
+      }
     </style>
+    <script language="javascript" type="text/javascript" src="A-star/p5.js" ></script>
+    <script language="javascript" type="text/javascript" src="matrix/sketch.js"></script>
     <title>Kaymas</title>
   </head>
 
   <body>
-	   <h1>In Process</h1>
+    <header style="margin-bottom:50px">
+      <h1>In Process</h1>
+      <h2 style="margin-top:20px"><center>Meanwhile Check out the A-star implementation </center></h2>
+      <button onclick="location.href='A-star/a-star.html'" type="button"
+      style="height:30px;width:100px;font-size:18px;">
+      A-star</button>
+    </header>
 	   <div class="subcontainer" id="siri-container">
 	   </div>
-     <h2 style="margin-top:100px"><center>Meanwhile Check out the A-star implementation </center></h2>
-     <button onclick="location.href='A-star/a-star.html'" type="button"
-     style="height:30px;width:100px;font-size:18px;">
-     A-star</button>
 
   </body>
     <script src="siriwavejs.js"></script>
@@ -68,7 +90,7 @@
         container: document.getElementById('siri-container'),
         autostart: true,
         amplitude: 1,
-	color: '#00f',
+	color: '#fff',
 	speed: 0.1,
 	cover: true,
   });/*
@@ -82,5 +104,5 @@
     });
 	*/
     </script>
-
+    <div id="sketch-holder" class="matrix"></div>
 </html>
