--- a/collatz_conj.html
+++ b/collatz_conj.html
@@ -1,12 +1,12 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <script language="javascript" type="text/javascript" src="../A-star/p5.js"></script>
+  <script language="javascript" type="text/javascript" src="js/p5.js"></script>
   <!-- uncomment lines below to include extra p5 libraries -->
   <!--<script language="javascript" src="libraries/p5.dom.js"></script>-->
   <!--<script language="javascript" src="libraries/p5.sound.js"></script>-->
-  <script language="javascript" type="text/javascript" src="sketch.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <script language="javascript" type="text/javascript" src="js/collatz.js"></script>
+  <link rel="stylesheet" href="css/collatz_css.css">
 </head>
 <body>
 
